# ocmonitor-share

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGES_REPORT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  MANIFEST.in  MANUAL_TEST_GUIDE.md  QUICK_START.md  README.md  REMOTE_PRICING_FALLBACK_IMPLEMENTATION_PLAN.md  WORKFLOW_GROUPING_PLAN.md  claude.md  docker-compose.yml  fetch_prices.md  install.sh  mock_session.py  ocmonitor-wrapper.sh  ocmonitor.sh  plan_tools  pyproject.toml  requirements.txt  setup.py
docs/plans/: 2026-03-04-tui-design.md  TUI_plan.md  fix-multi-workflow-tracking.md
ocmonitor/: __init__.py  cli.py  config.py  config.toml  models.json
ocmonitor/models/: analytics.py  session.py  tool_usage.py  workflow.py
ocmonitor/services/: agent_registry.py  export_service.py  live_monitor.py  metrics_server.py  price_fetcher.py  report_generator.py  session_analyzer.py  session_grouper.py
ocmonitor/tui/: __init__.py  app.py  styles.tcss
ocmonitor/tui/screens/: __init__.py  config.py  daily.py  help.py  live.py  models.py  monthly.py  projects.py  session_detail.py  sessions.py  weekly.py
ocmonitor/tui/widgets/: __init__.py  breadcrumb.py  export_modal.py  filter_bar.py  sidebar.py
ocmonitor/ui/: dashboard.py  tables.py  theme.py
ocmonitor/utils/: currency.py  data_loader.py  error_handling.py  file_utils.py  formatting.py  sqlite_utils.py  time_utils.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_export_service_version.py  test_file_utils.py  test_live_monitor.py  test_models.py  test_price_fetcher.py  test_sqlite_active_workflows.py  test_sqlite_tool_usage.py  test_sqlite_utils.py  test_tables.py  test_time_utils.py
